--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title> Hello </title>
+    <title> HAndrasCrack's Test </title>
     
   </head>
   <body>
     <h1>
-      Hello
+      Welcome to HAndrasCrack's Page
     </h1>
     <br>
     <p>
