--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> HAndrasCrack's <em>Test</em> </title>
+    <title> HAndrasCrack's Test </title>
     
   </head>
   <body>
