--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       Welcome to HAndrasCrack's Page
     </h1>
     <br>
-    <p>
+    <p class="firstthing">
       this is a <strong>test</strong>
     </p>
-    
+    <p>
+      and this is too
+    </p>
   </body>
 </html>
