--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <title> HAndrasCrack's Test </title>
-    p {font-weight: bold;
+    <style>
+      .firstthing {
+        font-weight: bold;
+      
+      }
+    </style>
   </head>
   <body>
     <h1>
