--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <style>
       .firstthing {
         font-weight: bold;
-      
+      .secondthing
+        font-weight: italic;
       }
     </style>
   </head>
@@ -16,7 +17,7 @@
     <p class="firstthing">
       this is a <strong>test</strong>
     </p>
-    <p>
+    <p class="secondthing">
       and this is too
     </p>
   </body>
