--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         font-weight: bold;
       .secondthing
         font-weight: italic;
+    .thirdthing
+        font-weight: bold;
       }
     </style>
   </head>
@@ -18,8 +20,13 @@
     <p>
       <strong>
         This is a random TF2 picture that i took
-        hope that i will make this without any bad stuff or idk it's too late
       </strong>
+    </p>
+    <p class="thirdthing">
+      and i hope 
+    </p>
+    <p>
+      that i will make this without any bad stuff or idk it's too late
     </p>
     <img src="Titanfall 2 Screenshot 2021.04.03 - 23.40.01.05.png" alt="a random picture">
     
