--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <style>
       .firstthing {
         font-weight: bold;
-      .secondthing
+      }
+      .secondthing {
         font-weight: italic;
-    .thirdthing
+      }
+    .thirdthing {
         font-weight: bold;
       }
     </style>
