--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     </style>
   </head>
   <body>
+    <!-- Headings ( welcoming txt ) -->
     <h1>
       Welcome to HAndrasCrack's Page
     </h1>
     
     <br>
+    <!-- Headings ( just testing this thing ) -->
     <h3>
         This is a random TF2 picture that i took
     </h3>
@@ -38,8 +40,9 @@
     <p class="secondthing">
       and this is too
     </p>
+    <!-- Headings ( this is to help me if the page refreshed yet ) -->
     <p>
-      helping text 123
+      helping text 1234
     </p>
   </body>
 </html>
