--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       that i will make this without any bad stuff or idk it's too late
     </p>
     <img src="Titanfall 2 Screenshot 2021.04.03 - 23.40.01.05.png" alt="a random picture">
-    
+    <img src="Titanfall 2 Screenshot 2021.04.21 - 18.59.46.64.png" alt="a picture of a caracter and a robot">
     <br>
     
     <p class="firstthing">
