--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
     <!--                             ( this is to help me if the page refreshed yet ) -->
     <p>
-      helping text 123456
+      helping text 1234567
     </p>
   </body>
 </html>
