--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         font-weight: bold;
       }
       img {
-      width: 490px;
-        
+      width: 245px;
+      border-radius: 10px;
       }
       
     </style>
